--- a/1_primeiros_passos/Prompt_Engineering.ipynb
+++ b/1_primeiros_passos/Prompt_Engineering.ipynb
@@ -54,7 +54,7 @@
    "source": [
     "import openai # Permite interação com modelos de linguagem treinados pela OpenAI\n",
     "import os\n",
-    "import IPython # Recursos para execução interativa \n",
+    "import IPython # Recursos para formatação\n",
     "from langchain.llms import OpenAI\n",
     "from dotenv import load_dotenv, find_dotenv"
    ]
@@ -79,9 +79,9 @@
     "    model=\"gpt-3.5-turbo\",\n",
     "    temperature=0.7,\n",
     "    max_tokens=256,\n",
-    "    top_p=1,\n",
-    "    frequency_penalty=0,\n",
-    "    presence_penalty=0,  \n",
+    "    top_p=1, # evita geração de texto irrelevante\n",
+    "    frequency_penalty=0, # penalidade para tokens repetidos\n",
+    "    presence_penalty=0,  # penalidade por tokens que não apareceram\n",
     "):\n",
     "    \"\"\" definir parâmetros openai\"\"\"\n",
     "    \n",
@@ -97,8 +97,8 @@
     "    return openai_params\n",
     "\n",
     "def get_completion(params, messages):\n",
-    "    \"\"\" obter resposta da API openai\"\"\"\n",
     "    \n",
+    "    \"\"\" obter resposta da API openai\"\"\"\n",
     "    \n",
     "    response = openai.chat.completions.create(\n",
     "        model = params['model'],\n",
@@ -150,7 +150,7 @@
     {
      "data": {
       "text/plain": [
-       "'A cor do céu pode variar dependendo da hora do dia e das condições meteorológicas. Geralmente, o céu é azul durante o dia e pode mudar para tons de laranja, rosa, roxo ou vermelho durante o nascer ou pôr do sol. Durante a noite, o céu pode parecer preto ou escuro, mas em áreas com pouca poluição luminosa, é possível ver estrelas e a Via Láctea, que dão ao céu uma tonalidade azul escura ou roxa.'"
+       "'A cor do céu varia dependendo das condições climáticas e da hora do dia. Durante o dia, o céu geralmente parece azul devido à dispersão da luz solar pela atmosfera. Durante o pôr do sol e o nascer do sol, o céu pode adquirir tons de laranja, vermelho, rosa e roxo. Durante a noite, o céu costuma ser escuro, mas pode ser iluminado pela lua e pelas estrelas.'"
       ]
      },
      "execution_count": 5,
@@ -177,7 +177,7 @@
     {
      "data": {
       "text/markdown": [
-       "A cor do céu pode variar dependendo da hora do dia e das condições climáticas. Geralmente, durante o dia, o céu é azul, mas pode apresentar tons de laranja, rosa, roxo e vermelho durante o nascer e o pôr do sol. Durante a noite, o céu pode ser preto ou escuro, mas também pode apresentar tons de azul escuro, roxo e prateado, dependendo da iluminação da lua e das estrelas."
+       "A cor do céu pode variar dependendo da hora do dia e das condições climáticas. Durante o dia, o céu geralmente é azul, devido à dispersão da luz solar na atmosfera. Durante o pôr do sol e o nascer do sol, o céu pode apresentar tons de laranja, rosa, vermelho e roxo. Durante a noite, o céu pode parecer preto, mas na verdade é um tom de azul escuro."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -203,27 +203,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
+       "Os antibióticos são remédios que ajudam a combater as bactérias que deixam a gente doente. Eles podem matar as bactérias ou impedir que elas se multipliquem, para que nosso corpo consiga se livrar da infecção. \n",
        "\n",
+       "Os antibióticos podem ser tomados de diferentes formas, como em comprimidos, cápsulas ou até mesmo em líquido. Às vezes, eles também podem ser colocados direto na veia. \n",
        "\n",
-       "É importante seguir as instruções do médico ao tomar antibióticos, incluindo completar todo o curso de tratamento, mesmo que os sintomas melhorem antes. Interromper o tratamento prematuramente pode resultar em uma infecção recorrente ou resistência aos antibióticos.\n",
-       "\n",
-       "Além disso, é importante não compartilhar antibióticos com outras pessoas, pois o medicamento pode não ser apropriado para a condição delas e pode causar efeitos colaterais indesejados.\n",
-       "\n",
-       "É essencial informar ao médico sobre qualquer alergia a antibióticos ou outros medicamentos, bem como qualquer outra condição de saúde que possa afetar o uso seguro dos antibióticos.\n",
-       "\n",
-       "Em resumo, os antibióticos são uma ferramenta importante no tratamento de infecções bacterianas, mas seu uso deve ser cuidadosamente monitorado e seguido de acordo com as orientações médicas para garantir a eficácia e evitar problemas de resistência."
+       "É importante lembrar que os antibióticos não funcionam contra vírus, apenas contra bactérias. E se a gente usar os antibióticos de forma errada, as bactérias podem ficar mais fortes e os remédios podem não funcionar mais. Por isso, é importante sempre seguir as orientações do médico quando precisamos tomar antibióticos."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +227,11 @@
    "source": [
     "params = set_open_params(temperature=0)\n",
     "\n",
-    "prompt =\"\"\"Os antibióticos são um tipo de medicamento usado para tratar infecções bacterianas.\\n\n",
+    "prompt =\"\"\"\n",
+    "Responda o texto a seguir levando em consideração que VOCÊ ESTÁ EXPLICANDO PARA UMA CRIANÇA DE 5 ANOS.\n",
+    "\n",
+    "\n",
+    "Os antibióticos são um tipo de medicamento usado para tratar infecções bacterianas.\\n\n",
     " Eles atuam matando as bactérias ou impedindo-as de se reproduzirem, permitindo que o sistema imunológico do corpo combata a infecção.\\n\n",
     " Os antibióticos são geralmente tomados por via oral na forma de comprimidos, cápsulas ou soluções líquidas, ou às vezes administrados por via intravenosa.\\n\n",
     " Eles não são eficazes contra infecções virais e seu uso inadequado pode levar à resistência aos antibióticos.\"\"\"\n",
@@ -249,11 +249,224 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<font color=\"red\">Exercício:</font>Instrua o modelo a explicar o parágrafo para uma criança de 5 anos. Você vê alguma diferença?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.2 Resposta a perguntas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "O OKT3 foi originalmente proveniente de ratos."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prompt = \"\"\"Responda à pergunta com base no contexto abaixo. Mantenha a resposta curta e concisa.\\n\n",
+    "Responda \"Não tenho certeza sobre a resposta\" SE NÃO TIVER CERTEZA DA RESPOSTA.\n",
+    "\n",
+    "Contexto: Teplizumab tem suas raízes em uma empresa farmacêutica de Nova Jersey chamada Ortho Pharmaceutical.\\n\n",
+    "Lá, os cientistas geraram uma versão inicial do anticorpo, batizada de OKT3.\\n\n",
+    "Originalmente proveniente de ratos, a molécula foi capaz de se ligar à superfície das células T e limitar o seu potencial de morte celular.\\n\n",
+    "Em 1986, foi aprovado para ajudar a prevenir a rejeição de órgãos após transplantes renais, tornando-se o primeiro anticorpo terapêutico permitido para uso humano.\n",
+    "\n",
+    "Pergunta: Qual foi originalmente a origem do OKT3?\n",
+    "\n",
+    "Responder:\"\"\"\n",
+    "\n",
+    "messages = [\n",
+    "    {\n",
+    "        \"role\": \"user\",\n",
+    "        \"content\": prompt\n",
+    "    }\n",
+    "]\n",
+    "\n",
+    "response = get_completion(params, messages)\n",
+    "IPython.display.Markdown(response.choices[0].message.content)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Contexto obtido **aqui!**](https://www.nature.com/articles/d41586-023-00400-x)\n",
+    "\n",
+    "<font color=\"red\">Exercício:</font> Edite o prompt e faça com que o modelo responda que não tem certeza sobre a resposta."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.3 Classificação do Texto"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "Neutro.\n",
+       "\n",
+       "Explicação:\n",
+       "O texto expressa uma opinião sobre a comida, mas de forma neutra, sem indicar claramente se a experiência foi positiva ou negativa. A palavra \"acho\" indica uma opinião pessoal, mas não fornece informações suficientes para determinar se a comida foi considerada boa ou ruim. Portanto, a classificação neutra é a mais apropriada."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prompt = \"\"\"\n",
+    "Classifique o texto em neutro, negativo ou positivo e explique o porquê de você ter tirado essa conclusão.\n",
+    "\n",
+    "Texto: Acho que a comida estava boa.\n",
+    "\n",
+    "Sentimento:\n",
+    "\"\"\"\n",
+    "\n",
+    "messages = [\n",
+    "    {\n",
+    "        \"role\": \"user\",\n",
+    "        \"content\": prompt\n",
+    "    }\n",
+    "]\n",
+    "\n",
+    "response = get_completion(params, messages)\n",
+    "IPython.display.Markdown(response.choices[0].message.content)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<font color=\"red\">Exercício:</font> Modifique o prompt para instruir o modelo a fornecer uma explicação para a resposta selecionada."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.4 Representação de papéis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "Claro! Os buracos negros são regiões do espaço-tempo onde a gravidade é tão intensa que nada, nem mesmo a luz, consegue escapar. Eles são formados a partir do colapso de estrelas massivas no final de sua vida. Essa massa concentrada cria um campo gravitacional extremamente forte, que suga tudo ao seu redor. É como se fosse um poço sem fundo no espaço."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prompt = \"\"\"A seguir temos uma conversa entre um Humano e uma Inteligência Artificial. A Inteligência Artificial é assistente em técnica científica.\n",
+    "COMPLETE O DIÁLOGO A SEGRIR TRAZENDO UMA RESPOSTA PARA O HUMANO.\n",
+    "\n",
+    "Humano: Olá, quem é você?\n",
+    "IA: Saudação! Sou assistente de pesquisa de IA. Como posso ajudá-lo hoje?\n",
+    "Humano: Você pode me contar sobre a criação de buracos negros?\n",
+    "IA:\"\"\"\n",
+    "\n",
+    "messages = [\n",
+    "    {\n",
+    "        \"role\": \"user\",\n",
+    "        \"content\": prompt\n",
+    "    }\n",
+    "]\n",
+    "\n",
+    "response = get_completion(params, messages)\n",
+    "IPython.display.Markdown(response.choices[0].message.content)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<font color=\"red\">Exercício:</font> Modifique o prompt para instruir o modelo a manter as respostas de IA concisas e curtas."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.5 Geração de Código"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "SELECT StudentId, StudentName\n",
+       "FROM estudantes\n",
+       "WHERE DepartmentId = (SELECT DepartmentId FROM departamentos WHERE DepartmentName = 'Ciência da Computação');"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prompt = \"\"\"\n",
+    "Tabela departamentos, colunas = [DepartmentId, DepartmentName]\\n\n",
+    "Tabela estudantes, colunas = [DepartmentId, StudentId, StudentName]\\n\n",
+    "Crie uma consulta MySQL para todos os alunos do Departamento de Ciência da Computação\n",
+    "\"\"\"\n",
+    "messages = [\n",
+    "    {\n",
+    "        \"role\": \"user\",\n",
+    "        \"content\": prompt\n",
+    "    }\n",
+    "]\n",
+    "\n",
+    "response = get_completion(params, messages)\n",
+    "IPython.display.Markdown(response.choices[0].message.content)"
+   ]
   }
  ],
  "metadata": {
