Primeiros passos com a Prompt Engineering.

--- a/1_primeiros_passos/Prompt_Engineering.ipynb
+++ b/1_primeiros_passos/Prompt_Engineering.ipynb
@@ -34,9 +34,9 @@
     "\n",
     "    Usaremos as APIs OpenAI para todos os exemplos. Estou usando as configurações padrão de temperature = 0,7 e top-p = 1\n",
     "\n",
-    "1. Noções básicas de Prompt Engineering\n",
+    "# 1. Noções básicas de Prompt Engineering\n",
     "\n",
-    "* Objetivos\n",
+    "* Objetivos:\n",
     "\n",
     "    * Carregue as bibliotecas\n",
     "    * Revise o formato\n",
@@ -48,7 +48,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#%%capture\n",
+    "# update or install the necessary libraries\n",
+    "#%pip install --upgrade openai\n",
+    "#%pip install --upgrade langchain\n",
+    "#%pip install --upgrade python-dotenv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,16 +157,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'A cor do céu varia dependendo das condições climáticas e da hora do dia. Durante o dia, o céu geralmente parece azul devido à dispersão da luz solar pela atmosfera. Durante o pôr do sol e o nascer do sol, o céu pode adquirir tons de laranja, vermelho, rosa e roxo. Durante a noite, o céu costuma ser escuro, mas pode ser iluminado pela lua e pelas estrelas.'"
+       "'A cor do céu pode variar dependendo da hora do dia e das condições atmosféricas. Durante o dia, o céu costuma parecer azul devido à dispersão da luz solar na atmosfera. Durante o pôr do sol e o nascer do sol, o céu pode apresentar tons de laranja, rosa, vermelho e roxo. Durante a noite, o céu geralmente parece preto, mas pode apresentar tons de azul escuro ou roxo em áreas urbanas devido à poluição luminosa.'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,19 +184,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "A cor do céu pode variar dependendo da hora do dia e das condições climáticas. Durante o dia, o céu geralmente é azul, devido à dispersão da luz solar na atmosfera. Durante o pôr do sol e o nascer do sol, o céu pode apresentar tons de laranja, rosa, vermelho e roxo. Durante a noite, o céu pode parecer preto, mas na verdade é um tom de azul escuro."
+       "A cor do céu pode variar dependendo da hora do dia e das condições climáticas. Geralmente, durante o dia, o céu é azul devido à dispersão da luz solar na atmosfera. Durante o pôr do sol e o nascer do sol, o céu pode apresentar tons de laranja, rosa, roxo e vermelho. Durante a noite, o céu pode parecer preto devido à ausência de luz solar, mas em áreas com pouca poluição luminosa, é possível ver estrelas e a Via Láctea, que dão ao céu uma cor escura azulada."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,23 +216,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "Os antibióticos são remédios que ajudam a combater as bactérias que deixam a gente doente. Eles podem matar as bactérias ou impedir que elas se multipliquem, para que nosso corpo consiga se livrar da infecção. \n",
+       "Os antibióticos são remédios que ajudam a combater as bactérias que deixam a gente doente. Eles podem matar as bactérias ou impedir que elas se multipliquem. Assim, nosso corpo consegue se livrar da infecção.\n",
        "\n",
-       "Os antibióticos podem ser tomados de diferentes formas, como em comprimidos, cápsulas ou até mesmo em líquido. Às vezes, eles também podem ser colocados direto na veia. \n",
-       "\n",
-       "É importante lembrar que os antibióticos não funcionam contra vírus, apenas contra bactérias. E se a gente usar os antibióticos de forma errada, as bactérias podem ficar mais fortes e os remédios podem não funcionar mais. Por isso, é importante sempre seguir as orientações do médico quando precisamos tomar antibióticos."
+       "Os antibióticos podem ser tomados de diferentes formas, como em comprimidos, cápsulas ou líquidos. Às vezes, eles também são colocados direto na veia. Mas é importante lembrar que os antibióticos não funcionam contra vírus, só contra bactérias. E se a gente usar os antibióticos de forma errada, as bactérias podem ficar mais fortes e os remédios não vão mais funcionar. Então, é importante sempre seguir as orientações do médico quando precisar tomar antibióticos."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +287,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -332,13 +343,13 @@
        "Neutro.\n",
        "\n",
        "Explicação:\n",
-       "O texto expressa uma opinião sobre a comida, mas de forma neutra, sem indicar claramente se a experiência foi positiva ou negativa. A palavra \"acho\" indica uma opinião pessoal, mas não fornece informações suficientes para determinar se a comida foi considerada boa ou ruim. Portanto, a classificação neutra é a mais apropriada."
+       "O texto expressa uma opinião sobre a comida, mas de forma neutra, sem indicar claramente se a experiência foi positiva ou negativa. A palavra \"acho\" indica uma opinião pessoal, mas não fornece detalhes suficientes para determinar se a comida foi considerada boa ou ruim. Portanto, a classificação como neutro é a mais apropriada."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +402,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +457,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,6 +468,229 @@
     "Tabela estudantes, colunas = [DepartmentId, StudentId, StudentName]\\n\n",
     "Crie uma consulta MySQL para todos os alunos do Departamento de Ciência da Computação\n",
     "\"\"\"\n",
+    "messages = [\n",
+    "    {\n",
+    "        \"role\": \"user\",\n",
+    "        \"content\": prompt\n",
+    "    }\n",
+    "]\n",
+    "\n",
+    "response = get_completion(params, messages)\n",
+    "IPython.display.Markdown(response.choices[0].message.content)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.6 Raciocínio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "Números ímpares: 15, 5, 13, 7, 1\n",
+       "\n",
+       "Soma dos números ímpares: 15 + 5 + 13 + 7 + 1 = 41\n",
+       "\n",
+       "Agora, vamos verificar se a soma dos números ímpares é par ou ímpar.\n",
+       "\n",
+       "41 é um número ímpar."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import IPython.display\n",
+    "\n",
+    "\n",
+    "prompt = \"\"\"Os números ímpares neste grupo somam um número par: 15, 32, 5, 13, 82, 7, 1.\n",
+    "\n",
+    "Resolva dividindo o problema em etapas. Primeiro, identifique os números ímpares, some-os e indique se o resultado é ímpar ou par.\"\"\"\n",
+    "\n",
+    "messages = [\n",
+    "    { \n",
+    "        \"role\":\"user\",\n",
+    "        \"content\": prompt\n",
+    "    }\n",
+    "]\n",
+    "\n",
+    "response = get_completion(params, messages)\n",
+    "IPython.display.Markdown(response.choices[0].message.content)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<font color=\"red\">Exercício:</font> Melhore o prompt para ter uma melhor estrutura e formato de saída."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2. Técnicas avançadas de solicitação\n",
+    "\n",
+    "* Objetivos:\n",
+    "\n",
+    "    * Aborde técnicas mais avançadas de prompts: poucos disparos, cadeia de pensamentos,..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.1  Few-shot prompts / Poucos exemplos\n",
+    "\n",
+    "No few-shot o modelo recebe exemplos de som ou aparência de como a saída deve ser. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       " A resposta é falsa."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prompt= \"\"\" \n",
+    "RESPONDA SE O RESULTADO DAS SOMAS E IMPAR OU PAR.\n",
+    "NÃO QUERO QUE VC SIGA UMA LÓGICA OU PADRÃO, MAS SIM  QUE VOCÊ FAÇA A SOMA E DÊ UMA RESPOSTA CORRETA SOBRE A SOMA SER IMPAR OU PAR.\n",
+    "\n",
+    "Os números ímpares neste grupo somam um número par: 4, 8, 9, 15, 12, 2, 1.\n",
+    "R: A resposta é falsa.\n",
+    "\n",
+    "Os números ímpares neste grupo somam um número par: 17, 10, 19, 4, 8, 12, 24.\n",
+    "R: A resposta é verdadeira.\n",
+    "\n",
+    "Os números ímpares neste grupo somam um número par: 16, 11, 14, 4, 8, 13, 24.\n",
+    "R: A resposta é verdadeira.\n",
+    "\n",
+    "Os números ímpares neste grupo somam um número par: 17, 9, 10, 12, 13, 4, 2.\n",
+    "R:\"\"\"\n",
+    "\n",
+    "messages = [\n",
+    "    {\n",
+    "        \"role\": \"user\",\n",
+    "        \"content\": prompt\n",
+    "    }\n",
+    "]\n",
+    "\n",
+    "response = get_completion(params, messages)\n",
+    "IPython.display.Markdown(response.choices[0].message.content)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.2 Chain-of-Thought (CoT) Prompting / Cadeia de pensamento\n",
+    "\n",
+    "Levamos o modelo a ter raciocínio de forma lógica e sequêncial."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "Somando todos os números ímpares (15, 5, 13, 7, 1, 3) dá 44. A resposta é verdadeira."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prompt = \"\"\"Os números ímpares neste grupo somam um número par: 4, 8, 9, 15, 12, 2, 1.\n",
+    "R: Somando todos os números ímpares (9, 15, 1) dá 25. A resposta é falsa.\n",
+    "\n",
+    "Os números ímpares neste grupo somam um número par: 15, 32, 5, 13, 82, 7, 1, 3.\n",
+    "A:\"\"\"\n",
+    "\n",
+    "messages = [\n",
+    "    {\n",
+    "        \"role\": \"user\",\n",
+    "        \"content\": prompt\n",
+    "    }\n",
+    "]\n",
+    "\n",
+    "response = get_completion(params, messages)\n",
+    "IPython.display.Markdown(response.choices[0].message.content)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.3 Zero-shot CoT\n",
+    "\n",
+    "No Zero-shot o modelo recebe uma tarefe sem contexto ou exemplos anteriores."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "\n",
+       "\n",
+       "Inicialmente comprei 10 maçãs. Depois dei 2 para o vizinho e 2 para o reparador, então fiquei com 10 - 2 - 2 = 6 maçãs.\n",
+       "\n",
+       "Depois comprei mais 5 maçãs, então fiquei com 6 + 5 = 11 maçãs.\n",
+       "\n",
+       "Por fim, comi 1 maçã, então fiquei com 11 - 1 = 10 maçãs.\n",
+       "\n",
+       "Portanto, fiquei com 10 maçãs no final."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prompt = \"\"\"Fui ao mercado e comprei 10 maçãs. Dei 2 maçãs para o vizinho e 2 para o reparador. Depois fui comprar mais 5 maçãs e comi 1. Com quantas maçãs fiquei?\n",
+    "\n",
+    "Vamos pensar passo a passo.\"\"\"\n",
+    "\n",
     "messages = [\n",
     "    {\n",
     "        \"role\": \"user\",\n",
